src/objects/Login__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config for accessing data from external systems, such as the SLX Console</description>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Login</label>
</CustomObject>